style-spec/src/generator/items/enum/snapshots/maplibre_style_spec__generator__items__r#enum__regular__tests__generate_spec_weird_keys.snap
---
source: maplibre-style-spec/src/generator/items/enum/regular.rs
expression: "crate::generator::generate_spec_scope(&spec)"
---
/// JSON number in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct NumberLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_json_number))]
    serde_json::Number,
);

/// JSON string in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct StringLiteral(std::string::String);

impl From<serde_json::Number> for NumberLiteral {
    fn from(n: serde_json::Number) -> Self {
        Self(n)
    }
}

impl From<std::string::String> for StringLiteral {
    fn from(s: std::string::String) -> Self {
        Self(s)
    }
}

/// GeoJSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct GeoJSONObjectLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_geojson))]
    geojson::GeoJson,
);

/// JSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct JSONObjectLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_json_value))]
    serde_json::Value,
);

/// JSON array literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct JSONArrayLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_vec_json_value))]
    Vec<serde_json::Value>,
);

/// Array whose elements are string literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct ArrayOfStringLiteral(Vec<StringLiteral>);

/// Array whose elements are number literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct ArrayOfNumberLiteral(Vec<NumberLiteral>);

/// This is a Maplibre Style Specification
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct MaplibreStyleSpecification;

/// An expression node or a literal JSON value in expression positions.
#[derive(PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub enum ExprOrLiteral {
    Null,
    Bool(bool),
    NumberLiteral(NumberLiteral),
    StringLiteral(StringLiteral),
    GeoJSONObjectLiteral(GeoJSONObjectLiteral),
    JSONObjectLiteral(JSONObjectLiteral),
    JSONArrayLiteral(JSONArrayLiteral),
    AnyExpr(Box<Any>),
    ArrayExpr(Box<Array>),
    BooleanExpr(Box<Boolean>),
    CollatorExpr(Box<Collator>),
    ColorExpr(Box<Color>),
    FormattedExpr(Box<Formatted>),
    ImageExpr(Box<Image>),
    NumberExpr(Box<Number>),
    ObjectExpr(Box<Object>),
    StringExpr(Box<String>),
}

impl serde::Serialize for ExprOrLiteral {
    fn serialize<S: serde::Serializer>(&self, serializer: S) -> Result<S::Ok, S::Error> {
        match self {
            Self::Null => serializer.serialize_unit(),
            Self::Bool(v) => v.serialize(serializer),
            Self::NumberLiteral(v) => v.serialize(serializer),
            Self::StringLiteral(v) => v.serialize(serializer),
            Self::GeoJSONObjectLiteral(v) => v.serialize(serializer),
            Self::JSONObjectLiteral(v) => v.serialize(serializer),
            Self::AnyExpr(v) => v.as_ref().serialize(serializer),
            Self::ArrayExpr(v) => v.as_ref().serialize(serializer),
            Self::BooleanExpr(v) => v.as_ref().serialize(serializer),
            Self::CollatorExpr(v) => v.as_ref().serialize(serializer),
            Self::ColorExpr(v) => v.as_ref().serialize(serializer),
            Self::FormattedExpr(v) => v.as_ref().serialize(serializer),
            Self::ImageExpr(v) => v.as_ref().serialize(serializer),
            Self::NumberExpr(v) => v.as_ref().serialize(serializer),
            Self::ObjectExpr(v) => v.as_ref().serialize(serializer),
            Self::StringExpr(v) => v.as_ref().serialize(serializer),
            Self::JSONArrayLiteral(v) => v.serialize(serializer),
        }
    }
}

impl<'de> serde::Deserialize<'de> for ExprOrLiteral {
    fn deserialize<D: serde::Deserializer<'de>>(deserializer: D) -> Result<Self, D::Error> {
        let value = <serde_json::Value as serde::Deserialize>::deserialize(deserializer)?;
        let mut errors: Vec<(&str, std::string::String)> = Vec::new();
        if value.is_null() {
            return Ok(Self::Null);
        }
        match <bool as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::Bool(v)),
            Err(e) => errors.push(("Bool", e.to_string())),
        }
        match <NumberLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::NumberLiteral(v)),
            Err(e) => errors.push(("NumberLiteral", e.to_string())),
        }
        match <StringLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::StringLiteral(v)),
            Err(e) => errors.push(("StringLiteral", e.to_string())),
        }
        match <GeoJSONObjectLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::GeoJSONObjectLiteral(v)),
            Err(e) => errors.push(("GeoJSONObjectLiteral", e.to_string())),
        }
        if !(value.is_array()) {
            match <JSONObjectLiteral as serde::Deserialize>::deserialize(&value) {
                Ok(v) => return Ok(Self::JSONObjectLiteral(v)),
                Err(e) => errors.push(("JSONObjectLiteral", e.to_string())),
            }
        }
        match <Any as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::AnyExpr(Box::new(v))),
            Err(e) => errors.push(("AnyExpr", e.to_string())),
        }
        match <Array as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ArrayExpr(Box::new(v))),
            Err(e) => errors.push(("ArrayExpr", e.to_string())),
        }
        match <Boolean as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::BooleanExpr(Box::new(v))),
            Err(e) => errors.push(("BooleanExpr", e.to_string())),
        }
        match <Collator as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::CollatorExpr(Box::new(v))),
            Err(e) => errors.push(("CollatorExpr", e.to_string())),
        }
        match <Color as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ColorExpr(Box::new(v))),
            Err(e) => errors.push(("ColorExpr", e.to_string())),
        }
        match <Formatted as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::FormattedExpr(Box::new(v))),
            Err(e) => errors.push(("FormattedExpr", e.to_string())),
        }
        match <Image as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ImageExpr(Box::new(v))),
            Err(e) => errors.push(("ImageExpr", e.to_string())),
        }
        match <Number as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::NumberExpr(Box::new(v))),
            Err(e) => errors.push(("NumberExpr", e.to_string())),
        }
        match <Object as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ObjectExpr(Box::new(v))),
            Err(e) => errors.push(("ObjectExpr", e.to_string())),
        }
        match <String as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::StringExpr(Box::new(v))),
            Err(e) => errors.push(("StringExpr", e.to_string())),
        }
        match <JSONArrayLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::JSONArrayLiteral(v)),
            Err(e) => errors.push(("JSONArrayLiteral", e.to_string())),
        }

        let details: Vec<std::string::String> =
            errors.iter().map(|(v, e)| format!("{v}: {e}")).collect();
        Err(serde::de::Error::custom(format!(
            "ExprOrLiteral: no variant matched. Expected Null | Bool(bool) | NumberLiteral(NumberLiteral) | StringLiteral(StringLiteral) | GeoJSONObjectLiteral(GeoJSONObjectLiteral) | JSONObjectLiteral(JSONObjectLiteral) | AnyExpr(Any) | ArrayExpr(Array) | BooleanExpr(Boolean) | CollatorExpr(Collator) | ColorExpr(Color) | FormattedExpr(Formatted) | ImageExpr(Image) | NumberExpr(Number) | ObjectExpr(Object) | StringExpr(String) | JSONArrayLiteral(JSONArrayLiteral). Errors: [{}]",
            details.join("; ")
        )))
    }
}

#[cfg(test)]
mod test {
    use super::*;
}
